--- a/util/node-http/package.json
+++ b/util/node-http/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mailparser": "^3.0.1",
+    "marked": "^1.2.7",
+    "pug": "^3.0.0",
     "serve-index": "^1.9.1",
     "smtp-server": "^3.8.0"
   }
