--- a/dbs/mysql/8/Dockerfile
+++ b/dbs/mysql/8/Dockerfile
@@ -7,6 +7,6 @@ ENV MYSQL_DATABASE=sample MYSQL_USER=metabase MYSQL_PASSWORD=metasample123 MYSQL
 COPY sample_data.sql.gz /docker-entrypoint-initdb.d/sample_data.sql.gz
 
 # Similar to other images, we specify a custom mysql data directory so it can be persisted to an image
-CMD ["--datadir", "/var/lib/mysql-mbsample", "--default-authentication-plugin=mysql_native_password"]
+CMD ["--datadir=/var/lib/mysql-mbsample", "--default-authentication-plugin=mysql_native_password", "--mysqlx=OFF"]
 
 # Nope: "--character-set-server", "utf8mb4"
