--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -68,7 +68,7 @@ jobs:
     strategy:
       matrix:
         edition: [oss, ee]
-        java-version: [8, 11]
+        java-version: [8, 11, 17]
     steps:
     - name: Prepare JRE (Java Run-time Environment)
       uses: actions/setup-java@v1
