--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -38,7 +38,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        java-version: [8, 11, 17]
+        java-version: [11, 17]
     steps:
     - name: Prepare JRE (Java Run-time Environment)
       uses: actions/setup-java@v1
