Rebasing against master

--- a/dbs/mongo/4.0/Dockerfile
+++ b/dbs/mongo/4.0/Dockerfile
@@ -5,6 +5,7 @@ ENV MONGO_INITDB_ROOT_USERNAME=metabase MONGO_INITDB_ROOT_PASSWORD=metasample123
 
 # We copy in our initialization data
 COPY dbs/mongo/data/*.tsv dbs/mongo/data/load.sh /docker-entrypoint-initdb.d/
+COPY ../certificates/*.crt ../certificates/*.key ../certificates/*.pem /etc/mongo/
 
 # Copy mongo server and client certificates. The client certificates are stored
 # in the image so that they can be pulled from them for local testing.
