--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -7,17 +7,17 @@ on:
 
 jobs:
   build-mongo:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -25,39 +25,43 @@ jobs:
         run: docker buildx build -f dbs/mongo/4.0/Dockerfile -t metabase/qa-databases:mongo-sample-4 --push --compress --no-cache --platform linux/arm64/v8,linux/amd64 .
       - name: Create mongo 5 container image
         run: docker buildx build -f dbs/mongo/5.0/Dockerfile -t metabase/qa-databases:mongo-sample-5 --push --compress --no-cache --platform linux/arm64/v8,linux/amd64 .
+      - name: Create mongo 5 container image
+        run: docker buildx build -f dbs/mongo/6.0/Dockerfile -t metabase/qa-databases:mongo-sample-5 --push --compress --no-cache --platform linux/arm64/v8,linux/amd64 .
     
   build-mssql:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # - name: Create mssql 2017 image
-      #   run: docker buildx build -f dbs/mssql/2017/Dockerfile -t metabase/qa-databases:mssql-sample-2017 --push --compress --no-cache .
+      - name: Create mssql 2017 image
+        run: docker buildx build -f dbs/mssql/2019/Dockerfile -t metabase/qa-databases:mssql-sample-2017 --push --compress --no-cache .
       - name: Create mssql 2019 image
         run: docker buildx build -f dbs/mssql/2019/Dockerfile -t metabase/qa-databases:mssql-sample-2019 --push --compress --no-cache .
+      - name: Create mssql 2022 image
+        run: docker buildx build -f dbs/mssql/2022/Dockerfile -t metabase/qa-databases:mssql-sample-2022 --push --compress --no-cache .
 
   build-mysql:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -67,17 +71,17 @@ jobs:
         run: docker buildx build -f dbs/mysql/8/Dockerfile -t metabase/qa-databases:mysql-sample-8 --push --compress --no-cache .
 
   build-postgres:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -85,3 +89,5 @@ jobs:
         run: docker buildx build -f dbs/postgres/9/Dockerfile -t metabase/qa-databases:postgres-sample-9 --push --compress --no-cache --platform linux/arm64/v8,linux/amd64 .
       - name: Create postgres 14 image
         run: docker buildx build -f dbs/postgres/14/Dockerfile -t metabase/qa-databases:postgres-sample-14 --push --compress --no-cache --platform linux/arm64/v8,linux/amd64 .
+      - name: Create postgres 15 image
+        run: docker buildx build -f dbs/postgres/15/Dockerfile -t metabase/qa-databases:postgres-sample-15 --push --compress --no-cache --platform linux/arm64/v8,linux/amd64 .
