Add Oracle XE image with SSL support

--- a/dbs/Makefile
+++ b/dbs/Makefile
@@ -1,7 +1,7 @@
-all: postgres mongo
+all: postgres mongo oracle
 
 # all our targets are phony (no files to check).
-.PHONY : postgres mongo
+.PHONY : postgres mongo oracle
 
 postgres:
 	cd postgres && ./build.sh
@@ -9,3 +9,5 @@ postgres:
 mongo: postgres
 	cd mongo && ./update_data.sh && ./build.sh
 
+oracle:
+	cd oracle && ./build.sh
