--- a/dbs/mysql/5.7/Dockerfile
+++ b/dbs/mysql/5.7/Dockerfile
@@ -8,7 +8,7 @@ ENV MYSQL_PASSWORD=metasample123
 # MySQL requires a root user password, we just use the same sample password
 ENV MYSQL_ROOT_PASSWORD=metasample123
 
-COPY data/sample_data.sql.gz /docker-entrypoint-initdb.d/sample_data.sql.gz
+COPY dbs/mysql/data/sample_data.sql.gz /docker-entrypoint-initdb.d/sample_data.sql.gz
 
 # Similar to other images, we specify a custom mysql data directory so it can be persisted to an image
 CMD ["--datadir", "/var/lib/mysql-mbsample"]
