--- a/dbs/mongo/6.0/Dockerfile
+++ b/dbs/mongo/6.0/Dockerfile
@@ -6,12 +6,12 @@ ENV MONGO_INITDB_ROOT_PASSWORD=metasample123
 ENV MONGO_INITDB_DATABASE=sample
 
 # We copy in our initialization data
-COPY data/*.tsv /docker-entrypoint-initdb.d/
-COPY data/load.sh /docker-entrypoint-initdb.d/
+COPY dbs/mongo/data/*.tsv /docker-entrypoint-initdb.d/
+COPY dbs/mongo/data/load.sh /docker-entrypoint-initdb.d/
 
 # Copy mongo server and client certificates. The client certificates are stored
 # in the image so that they can be pulled from them for local testing.
-COPY certificates/metabase.* certificates/metamongo.* certificates/metaca.* /etc/mongo/
+COPY dbs/mongo/certificates/metabase.* dbs/mongo/certificates/metamongo.* dbs/mongo/certificates/metaca.* /etc/mongo/
 
 # In order to have an image with pre-populated data, we override the db path
 RUN mkdir /data/db2/ \
