--- a/dbs/postgres/9/Dockerfile
+++ b/dbs/postgres/9/Dockerfile
@@ -1,4 +1,4 @@
-FROM postgres:12-alpine
+FROM postgres:9-alpine
 
 # We use a standard set of database names and users for our sample images
 ENV POSTGRES_DB=sample
@@ -8,5 +8,5 @@ ENV POSTGRES_PASSWORD=metasample123
 # PostgreSQL sets VOLUME /var/lib/postgresql/data in its Dockerfile which means it will be empty every time the container starts if you don’t persist it to the Docker host. 
 ENV PGDATA=/data
 
-COPY data/sample_data.sql.gz /docker-entrypoint-initdb.d/sample_data.sql.gz
+COPY dbs/postgres/data/sample_data.sql.gz /docker-entrypoint-initdb.d/sample_data.sql.gz
 
