--- a/dbs/mongo/Dockerfile
+++ b/dbs/mongo/Dockerfile
@@ -1,4 +1,5 @@
-FROM mongo:4.2
+ARG tag=latest
+FROM mongo:${tag}
 
 # We use a standard set of database names and users for our sample images
 ENV MONGO_INITDB_ROOT_USERNAME=metabase
