Build on gha (#31)
* Initial commit

* Build initial versions + weekly builds

* Simplifying everything

* Forgot Oracle paths

* Update dbs/oracle/Dockerfile

Co-authored-by: metamben <103100869+metamben@users.noreply.github.com>

* Adding matrixes

Co-authored-by: metamben <103100869+metamben@users.noreply.github.com>

--- a/dbs/mysql/Dockerfile
+++ b/dbs/mysql/Dockerfile
@@ -1,4 +1,5 @@
-FROM mysql:8
+ARG tag=latest
+FROM mysql:${tag}
 
 # We use a standard set of database names and users for our sample images
 ENV MYSQL_DATABASE=sample
@@ -8,7 +9,7 @@ ENV MYSQL_PASSWORD=metasample123
 # MySQL requires a root user password, we just use the same sample password
 ENV MYSQL_ROOT_PASSWORD=metasample123
 
-COPY data/sample_data.sql.gz /docker-entrypoint-initdb.d/sample_data.sql.gz
+COPY dbs/mysql/data/sample_data.sql.gz /docker-entrypoint-initdb.d/sample_data.sql.gz
 
 # Similar to other images, we specify a custom mysql data directory so it can be persisted to an image
 CMD ["--datadir", "/var/lib/mysql-mbsample"]
