--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -46,10 +46,10 @@ jobs:
   #     - name: Create mssql 2017 image
   #       run: docker buildx build -f dbs/mssql/2017/Dockerfile -t metabase/qa-databases:mssql-sample-2017 --push --compress --no-cache .
 
-  build-mysql:
+  build-mysql-old:
     strategy:
       matrix:
-        version: [5.7, 8]
+        version: [5.7]
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
@@ -66,6 +66,27 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Create mysql ${{ matrix.version }} image
         run: docker buildx build --build-arg tag=${{ matrix.version }} -f dbs/mysql/Dockerfile -t metabase/qa-databases:mysql-sample-${{ matrix.version }} --push --compress --no-cache .
+
+  build-mysql-recent:
+    strategy:
+      matrix:
+        version: [8]
+    runs-on: ubuntu-22.04
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Create mysql ${{ matrix.version }} image
+        run: docker buildx build --build-arg tag=${{ matrix.version }} -f dbs/mysql/Dockerfile -t metabase/qa-databases:mysql-sample-${{ matrix.version }} --push --compress --no-cache --platform linux/arm64/v8,linux/amd64 .
 
   build-postgres:
     runs-on: ubuntu-22.04
@@ -87,7 +108,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Create postgres ${{ matrix.version }} image
         run: docker buildx build --build-arg tag=${{ matrix.version }} -f dbs/postgres/Dockerfile -t metabase/qa-databases:postgres-sample-${{ matrix.version }} --push --compress --no-cache --platform linux/arm64/v8,linux/amd64 .
-  
+
   build-oracle:
     runs-on: ubuntu-22.04
     timeout-minutes: 30
