--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -126,3 +126,24 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Create oracle 21 image
         run: docker buildx build -f dbs/oracle/Dockerfile -t metabase/qa-databases:oracle-xe-21.3 --push --compress --no-cache .
+
+  build-mssql:
+    runs-on: ubuntu-22.04
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        version: [2017, 2019, 2022]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Create postgres ${{ matrix.version }} image
+        run: docker buildx build --build-arg tag=${{ matrix.version }} -f dbs/postgres/Dockerfile -t metabase/qa-databases:postgres-sample-${{ matrix.version }} --push --compress --no-cache --platform linux/amd64 .
